2008-02-19  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/DefaultEditActions.cs,
	  Mono.TextEditor.Tests/Mono.TextEditor.Tests.pidb,
	  Mono.TextEditor.Tests/Mono.TextEditor.Tests.DefaultEditActions/InsertTabTests.cs:
	  Found insert tab case that failed.

2008-02-19  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/DefaultEditActions.cs, Mono.TextEditor/TextEditorData.cs,
	  Mono.TextEditor.Tests/Mono.TextEditor.Tests.DefaultEditActions/SelectionSelectAllTests.cs:
	  Fixed "Bug 362983 - Text selected with Select All can't be unselected"

2008-02-19  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor.Tests/Mono.TextEditor.Tests.pidb: Copy to primary
	  clipboard is now lazy (Improves performance for large selections).

2008-02-19  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor.Tests/Mono.TextEditor.Tests.DefaultEditActions/InsertTabTests.cs,
	  Mono.TextEditor.Tests/Mono.TextEditor.Tests.DefaultEditActions/RemoveTabTests.cs:
	  Added Remove tab tests.

2008-02-19  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/DefaultEditActions.cs, Mono.TextEditor/TextViewMargin.cs,
	  Mono.TextEditor/TextEditorData.cs, Mono.TextEditor/TextEditor.cs: Fixed
	  little issues found by unit testing.
	* Mono.TextEditor.Tests/Mono.TextEditor.Tests/SelectionTests.cs,
	  Mono.TextEditor.Tests/Mono.TextEditor.Tests.DefaultEditActions/InsertTabTests.cs:
	  Extended unit tests.

2008-02-19  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/Caret.cs: Bug 362895 - Caret missplaced when jumping to an
	  error.

2008-02-19  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextViewMargin.cs: fixed Bug 362879 - Bracket highlight
	  not removed.

2008-02-19  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextViewMargin.cs, Mono.TextEditor/TextEditorData.cs,
	  Mono.TextEditor.Tests/Mono.TextEditor.Tests.pidb: Fixed Bug 362887 -
	  Paste command pastes text to the wrong location.

2008-02-19  Mike Krüger <mkrueger@novell.com> 
