@@ -82,7 +82,7 @@
 	<Style name="bracketHighlightBg" color="aluminium1"/>
 	
 	<Style name="bookmarkColor1" color="white"/>
-	<Style name="bookmarkColor2" color="skyblue2"/>
+	<Style name="bookmarkColor2" color="skyblue1"/>
 
 	<!-- highlighting -->
 	<Style name="comment" color="chameleon3"/>
