@@ -1,3 +1,7 @@
+2008-02-20  Mike Krüger <mkrueger@novell.com> 
+
+	* Mono.TextEditor/BookmarkMargin.cs: Bookmark is now scaling better.
+
 2008-02-19  Mike Krüger <mkrueger@novell.com> 
 
 	* Mono.TextEditor/DefaultEditActions.cs,
